# platform-fighter

./: .gitignore  CMakeLists.txt  README.md
include/: Enemy.h  Game.h  Platform.h  Player.h
src/: Enemy.cpp  Game.cpp  Platform.cpp  Player.cpp  main.cpp
